# SD_Thesis

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  INTEGRATION_TEST_REPORT.md  LICENSE  PROJECT_COMPLETION.md  PROJECT_STATUS_REPORT.md  README.md  TESTING_GUIDE.md  debug_test.py  integration_test.py  package.xml  quick_check.py  requirements.txt
.github/workflows/: ci.yml
config/: camera_params.yaml  camera_test.rviz  complete_pipeline.rviz  orb_slam3_visualization.rviz  orbslam2_config.yaml  orbslam3_jetson.yaml  orbslam3_realsense.yaml  slam_visualization.rviz  yolo_config.yaml
config/orb_slam2/: realsense_d435i.yaml
docs/: API.md  benchmarking_plan.md  development_workflow.md  jetson_deployment.md  methodology.md  project_overview.md  setup_instructions.md  troubleshooting.md
launch/: complete_pipeline.launch  orb_slam3_realsense.launch  orb_slam3_realsense_cpp.launch  orb_slam3_realsense_robust.launch  real_hardware.launch  simulation.launch  test_camera.launch  test_cpp_orb_slam3.launch  test_orb_slam3_rviz.launch  test_slam.launch
scripts/: benchmark_system.py  complete_setup.sh  fix_pangolin.sh  generate_sample_data.py  install_dependencies.sh  install_orbslam3.sh  install_orbslam3_only.sh  install_pangolin_fixed.sh  install_pangolin_simple.sh  jetson_deployment.sh  performance_monitor.py  quick_validation.py  run_complete_pipeline.sh  run_orb_slam3.sh  setup_environment.sh  test_installation.py  test_orbslam3_integration.py  test_workspace.py  train_sci.py  train_zero_dce.py  verify_orbslam3.py  verify_setup.sh
src/camera/: camera_calibration.py  realsense_capture.py
src/detection/: detection_node.py  utils.py
src/detection/yolo_v4/: person_detector.py
src/enhancement/: utils.py
src/enhancement/sci/: enhance.py  model.py
src/enhancement/zero_dce/: enhance.py  model.py
src/ros_nodes/: camera_node.py  detection_node.py  enhancement_node.py  orb_slam3_node.cpp  orb_slam3_node.py  slam_node.py
src/slam/: dummy_slam.py  mapping.py  orbslam2_wrapper.py
tests/: test_camera.py  test_enhancement.py  test_slam.py  test_yolo.py
tests/integration_tests/: test_pipeline.py
tests/unit_tests/: test_detection.py
