<package format="2">
  <name>sd_thesis</name>
  <version>0.1.0</version>
  <description>This package contains the implementation for the SD Thesis project, focusing on low-light image enhancement, detection, and SLAM using Intel RealSense D435i.</description>
  <maintainer email="sam.duckworth@example.com">Sam Duckworth</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>yolo_ros</exec_depend>
  <exec_depend>orb_slam2_ros</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
</package>